enable compact header feature java